--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -19,4 +19,6 @@ install(FILES
         TYPE DOC
         RENAME "html/index.html")
 
-set(CPACK_DEBIAN_knp-documentation_PACKAGE_ARCHITECTURE "noarch")
+set(CPACK_DEBIAN_DOCUMENTATION_DESCRIPTION "KNP documentation and reference" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_ARCHITECTURE "noarch" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_DEPENDS " (== ${KNP_VERSION})," PARENT_SCOPE)
