--- a/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-multi-threaded-backend/CMakeLists.txt
@@ -55,3 +55,6 @@ install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
         COMPONENT "cpu-multi-threaded-backend-dev"
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp/backends"
         FILES_MATCHING PATTERN "*.h")
+
+set(CPACK_DEBIAN_CPU-MULTI-THREADED-BACKEND_DESCRIPTION "${PROJECT_DESCRIPTION}" PARENT_SCOPE)
+set(CPACK_DEBIAN_CPU-MULTI-THREADED-BACKEND-DEV_DESCRIPTION "${PROJECT_DESCRIPTION} development files" PARENT_SCOPE)
