--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -60,3 +60,16 @@ install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
         COMPONENT "framework-dev"
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
         FILES_MATCHING PATTERN "*.h")
+
+install(FILES
+        "${CMAKE_SOURCE_DIR}/LICENSE.txt"
+        "${CMAKE_SOURCE_DIR}/README.md"
+        COMPONENT "framework"
+        TYPE DOC)
+
+set(CPACK_DEBIAN_FRAMEWORK_DESCRIPTION "${PROJECT_DESCRIPTION}" PARENT_SCOPE)
+set(CPACK_DEBIAN_FRAMEWORK_PACKAGE_DEPENDS "libboost-all (>= ${KNP_BOOST_MIN_VERSION})," PARENT_SCOPE)
+
+set(CPACK_DEBIAN_FRAMEWORK-DEV_DESCRIPTION "${PROJECT_DESCRIPTION} development files" PARENT_SCOPE)
+set(CPACK_DEBIAN_FRAMEWORK-DEV_PACKAGE_RECOMMENDS "cppzmq-dev (>= 4.9.0-1), cppzmq (4.9.0-1)" PARENT_SCOPE)
+set(CPACK_DEBIAN_FRAMEWORK-DEV_PACKAGE_DEPENDS "libboost-all-dev (>= ${KNP_BOOST_MIN_VERSION})," PARENT_SCOPE)
