--- a/knp/backends/cpu/cpu-single-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu/cpu-single-threaded-backend/CMakeLists.txt
@@ -54,3 +54,6 @@ install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
         COMPONENT "cpu-single-threaded-backend-dev"
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp/backends"
         FILES_MATCHING PATTERN "*.h")
+
+set(CPACK_DEBIAN_CPU-SINGLE-THREADED-BACKEND_DESCRIPTION "${PROJECT_DESCRIPTION}" PARENT_SCOPE)
+set(CPACK_DEBIAN_CPU-SINGLE-THREADED-BACKEND-DEV_DESCRIPTION "${PROJECT_DESCRIPTION} development files" PARENT_SCOPE)
