--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -26,6 +26,8 @@ knp_add_library("${PROJECT_NAME}-core"
     impl/output_channel.cpp
     impl/save_network.cpp
     impl/load_network.cpp
+    impl/load_network_alt.cpp
+    impl/type_id_defines.cpp
     impl/csv_content.cpp
     impl/observer.cpp
 
@@ -34,7 +36,7 @@ add_library(KNP::BaseFramework::Core ALIAS "${PROJECT_NAME}-core")
 
 target_link_libraries("${PROJECT_NAME}-core" PRIVATE spdlog::spdlog_header_only Boost::headers Boost::filesystem)
 target_link_libraries("${PROJECT_NAME}-core" PUBLIC KNP::Core KNP::Neuron::Traits KNP::Synapse::Traits)
-target_link_libraries("${PROJECT_NAME}-core" PRIVATE HighFive sonata_static)
+target_link_libraries("${PROJECT_NAME}-core" PRIVATE HighFive sonata_static simdjson)
 
 target_include_directories("${PROJECT_NAME}-core" INTERFACE HighFive/include/ ${HDF5_INCLUDE_DIRS})
 target_link_libraries("${PROJECT_NAME}-core" INTERFACE HighFive ${HDF5_C_LIBRARIES})
