KNP documentation package finished

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,6 +5,7 @@ project(knp-documentation
 
 install(DIRECTORY
         "${CMAKE_CURRENT_SOURCE_DIR}/html"
+        "${CMAKE_CURRENT_SOURCE_DIR}/pdf"
         COMPONENT "documentation"
         TYPE DOC)
 #        DESTINATION "${CMAKE_INSTALL_PREFIX}/share/doc/knp/html")
@@ -19,6 +20,8 @@ install(FILES
         TYPE DOC
         RENAME "html/index.html")
 
-set(CPACK_DEBIAN_DOCUMENTATION_DESCRIPTION "KNP documentation and reference" PARENT_SCOPE)
-set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_ARCHITECTURE "noarch" PARENT_SCOPE)
-set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_DEPENDS " (== ${KNP_VERSION})," PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_DESCRIPTION "KNP documentation\nUser guide and reference" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_ARCHITECTURE "all" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_DEPENDS "knp-framework-dev (= ${KNP_VERSION})" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_PROVIDES "knp-documentation  (= ${KNP_VERSION})" PARENT_SCOPE)
+set(CPACK_DEBIAN_DOCUMENTATION_PACKAGE_SHLIBDEPS OFF)
