--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,10 +32,10 @@ repos:
       - id: check-merge-conflict
       # - id: no-commit-to-branch
 
-#  - repo: https://github.com/jorisroovers/gitlint
-#    rev: "v0.19.1"
-#    hooks:
-#      - id: gitlint
+  - repo: https://github.com/jorisroovers/gitlint
+    rev: "v0.19.1"
+    hooks:
+      - id: gitlint
 
   #
   # C++
