Packages dependencies set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,7 @@ endif()
 #
 
 set(CPACK_PACKAGE_NAME "${PROJECT_NAME}" CACHE STRING "The resulting package name")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 
 set(CPACK_PACKAGE_VERSION_MAJOR ${CMAKE_PROJECT_VERSION_MAJOR})
@@ -170,7 +171,8 @@ set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
         GROUP_READ GROUP_EXECUTE
         WORLD_READ WORLD_EXECUTE)
 
-set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
+# On Linux grouping must be ignored: one component - one package.
+set(CPACK_COMPONENTS_GROUPING IGNORE)
 set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
 
 
@@ -206,5 +208,6 @@ set(CPACK_RPM_COMPONENT_INSTALL ON)
 set(CPACK_RPM_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_RPM_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
 set(CPACK_RPM_PACKAGE_GROUP "science")
+
 
 include (CPack)
