--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,10 +1,17 @@
 cmake_minimum_required(VERSION 3.25)
 
+include(GNUInstallDirs)
+include(knp-functions)
 
 set(KNP_ENABLE_COVERAGE OFF)
 
 #add_subdirectory(digits-recognition)
 add_subdirectory(simple-network)
 
-set(CPACK_DEBIAN_EXAMPLES_DESCRIPTION "KNP examples" PARENT_SCOPE)
-set(CPACK_DEBIAN_EXAMPLES_PACKAGE_DEPENDS "knp (== ${KNP_VERSION})" PARENT_SCOPE)
+install(DIRECTORY "."
+        COMPONENT "examples"
+        DESTINATION "src/knp/examples")
+
+knp_packaging_set_parameters(examples examples
+        DESCRIPTION "KNP examples"
+        DEPENDS framework-dev)
