--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -27,8 +27,7 @@ target_link_libraries("${PROJECT_NAME}" INTERFACE KNP::Meta)
 
 install(TARGETS "${PROJECT_NAME}"
     EXPORT "${PROJECT_NAME}"
-    COMPONENT "framework-dev"
-)
+    COMPONENT "framework-dev")
 
 install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
         COMPONENT "framework-dev"
