Add arni example, fixed network loading

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,3 +5,4 @@ set(KNP_ENABLE_COVERAGE OFF)
 
 add_subdirectory(simple-network)
 add_subdirectory(save-load-networks)
+add_subdirectory(arni-save-load)
