--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -13,10 +13,9 @@ install(DIRECTORY
         "${CMAKE_CURRENT_SOURCE_DIR}/pdf"
         COMPONENT "${COMPONENT_NAME}"
         TYPE DOC)
-#        DESTINATION "${CMAKE_INSTALL_PREFIX}/share/doc/knp/html")
 
 file(READ "${CMAKE_CURRENT_SOURCE_DIR}/html/index.html" FILE_CONTENTS)
-string(REPLACE "../build/doc_doxygen/html/index.html" "reference/index.html" FILE_CONTENTS "${FILE_CONTENTS}")
+string(REPLACE "../../build/doc_doxygen/html/index.html" "reference/index.html" FILE_CONTENTS "${FILE_CONTENTS}")
 file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/index.html" "${FILE_CONTENTS}")
 
 install(FILES
