HTML color theme fix

--- a/knp/autodoc/CMakeLists.txt
+++ b/knp/autodoc/CMakeLists.txt
@@ -54,12 +54,13 @@ if(KNP_BUILD_DOCUMENTATION)
     set(DOXYGEN_GENERATE_HTML YES)
     set(DOXYGEN_GENERATE_MAN NO)
     set(DOXYGEN_GENERATE_TREEVIEW YES)
-    set(DOXYGEN_HTML_TIMESTAMP YES)
+    set(DOXYGEN_HTML_COLORSTYLE LIGHT)
     set(DOXYGEN_HTML_COLORSTYLE_GAMMA 113)
     set(DOXYGEN_HTML_COLORSTYLE_HUE 209)
     set(DOXYGEN_HTML_COLORSTYLE_SAT 255)
     set(DOXYGEN_HTML_DYNAMIC_MENUS YES)
     set(DOXYGEN_HTML_DYNAMIC_SECTIONS YES)
+    set(DOXYGEN_HTML_TIMESTAMP YES)
     set(DOXYGEN_IMAGE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/icons")
     set(DOXYGEN_INTERACTIVE_SVG YES)
     set(DOXYGEN_LAYOUT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/common_files/DoxygenLayout.xml")
@@ -145,8 +146,6 @@ if(KNP_BUILD_DOCUMENTATION)
 
     set(DOXYGEN_DOT_COMMON_ATTR "fontname=Helvetica,fontsize=10")
     set(DOXYGEN_DOT_EDGE_ATTR "labelfontname=Helvetica,labelfontsize=10")
-
-#    set(DOXYGEN_HTML_STYLESHEET )
 
     doxygen_add_docs(
             "${PROJECT_NAME}"
