--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,6 +4,7 @@ include(GNUInstallDirs)
 include(knp-functions)
 
 set(KNP_ENABLE_COVERAGE OFF)
+set(CMAKE_CXX_STANDARD 17)
 
 #add_subdirectory(digits-recognition)
 add_subdirectory(simple-network)
