--- a/examples/arni-save-load/CMakeLists.txt
+++ b/examples/arni-save-load/CMakeLists.txt
@@ -4,4 +4,4 @@ project(arni-save-load)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(arni-save-load main.cpp)
-target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core KNP::Backends::CPUSingleThreaded)
+target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core)
