Add saving data to h5 and loading it

--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -23,6 +23,7 @@ source_group(headers FILES ${${PROJECT_NAME}_headers} REGULAR_EXPRESSION "includ
 knp_add_library("${PROJECT_NAME}-core"
     BOTH
     impl/backend_loader.cpp
+    impl/data_saver.cpp
     impl/network.cpp
     impl/model.cpp
     impl/model_executor.cpp
