--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ project(knp VERSION "${KNP_VERSION}"
 
 set(KNP_BOOST_MIN_VERSION "1.74.0")
 
+
 #
 # KNP build options set.
 #
@@ -107,34 +108,43 @@ include(GNUInstallDirs)
 
 include(print-variables)
 
-set(SPDLOG_BUILD_PIC ON)
-set(EXTLIB_FROM_SUBMODULES ON)
-set(SONATA_TESTS OFF)
-set(SONATA_VERSION 1.0)
-add_third_party(libsonata)
-add_third_party(csv2)
-file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "third-party/**/include")
-include_directories(third-party ${THIRD_PARTY_INCLUDES})
+add_third_party(NAME "libsonata"
+                GIT_REPOSITORY "https://github.com/BlueBrain/libsonata"
+                VERSION "0.1.25"
+                OPTIONS
+                    "EXTLIB_FROM_SUBMODULES ON"
+                    "SONATA_TESTS OFF"
+                    "SONATA_VERSION 1.0")
+
+add_third_party("gh:p-ranav/csv2")
+add_third_party("gh:zeromq/libzmq@4.3.5")
+add_third_party("gh:zeromq/cppzmq@4.10.0")
 
 include(print-variables)
 
-set(FLATBUFFERS_BUILD_TESTS OFF)
-set(FLATBUFFERS_BUILD_CPP17 ON)
-add_third_party(flatbuffers)
-add_third_party(simdjson)
+add_third_party(NAME "flatbuffers"
+                GIT_REPOSITORY "https://github.com/google/flatbuffers"
+                VERSION "24.3.25"
+                OPTIONS
+                    "FLATBUFFERS_BUILD_TESTS OFF"
+                    "FLATBUFFERS_BUILD_CPP17 ON")
 
-add_third_party(pcm)
+add_third_party("gh:simdjson/simdjson@3.9.1")
+add_third_party("gh:intel/pcm#202403")
 
-set(SPDLOG_BUILD_PIC ON)
-add_third_party(spdlog)
+add_third_party(NAME "spdlog"
+                GIT_REPOSITORY "https://github.com/gabime/spdlog"
+                VERSION "1.13.0"
+                OPTIONS
+                    "SPDLOG_BUILD_PIC ON")
 
 if(KNP_BUILD_TESTS)
     add_compile_definitions(SPDLOG_ACTIVE_LEVEL=0)
-    add_third_party(googletest)
+    add_third_party("gh:google/googletest@1.14.0")
 endif()
 
-file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "third-party/**/include")
-include_directories(third-party ${THIRD_PARTY_INCLUDES})
+#file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "third-party/**/include")
+#include_directories(third-party ${THIRD_PARTY_INCLUDES})
 
 #
 # Build KNP.
