--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ a.out
 *.autosave
 
 
+# Third-party modules, downloaded by CPM.
+/third-party
+
+
 # Ignore C++ files in the root directory.
 
 /*.cpp
